<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.hanan.quizapp.MainActivity">
<LinearLayout
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/sherlockholmes"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="8dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/header"
        android:textSize="20sp"
        android:gravity="center_horizontal"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:textColor="#9E9D24"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/name_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/type_your_name_please"
        android:background="#9E9D24"
        android:textColor="@color/colorAccent"
        android:inputType="textCapWords"/>

    <TextView
        android:id="@+id/tv_above_q1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimaryDark"
        android:paddingTop="8dp"/>
    <TextView
        android:text="@string/first_question"
        style="@style/Questions"/>
    <CheckBox
        android:id="@+id/Poirot_ChB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hercule Poirot"
        style="@style/Answers"
       />
    <CheckBox
        android:id="@+id/Marple_ChB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Jane Marple"
        style="@style/Answers"
       />

    <CheckBox
        android:id="@+id/Lupin_ChB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Arsène Lupin"
        style="@style/Answers"/>
    <CheckBox
        android:id="@+id/watson_ChB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Dr. Watson"
        style="@style/Answers"/>

    <TextView
        android:id="@+id/tv_above_q2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"/>
    <TextView
        android:text="@string/second_question"
        style="@style/Questions"/>
<RadioGroup
    android:id="@+id/radio_gp2"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <RadioButton
        android:id="@+id/Wrong_Answer_Q2_1"
        android:text=" Agatha Christie"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Answers"/>
    <RadioButton
        android:id="@+id/Right_Answer_Q2"
        android:text="Maurice Leblanc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Answers"
        />
    <RadioButton
        android:id="@+id/Wrong_Answer_Q2_2"
        android:text="Arthur Conan Doyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Answers"/>
</RadioGroup>

    <TextView
        android:id="@+id/tv_above_q3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"/>
    <TextView
        android:text="@string/third_question"
        style="@style/Questions"/>
    <RadioGroup
        android:id="@+id/radio_gp3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    <RadioButton
        android:id="@+id/Wrong_Answer_Q3_1"
        android:text=" Ariadne Oliver"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Answers"/>
    <RadioButton
        android:id="@+id/Right_Answer_Q3"
        android:text="Arthur Hastings "
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Answers"/>
    <RadioButton
        android:id="@+id/Wrong_Answer_Q3_2"
        android:text="Miss Felicity Lemon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Answers"/>
    <RadioButton
        android:id="@+id/Wrong_Answer_Q3_3"
        android:text=" Chief Inspector Japp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Answers"/>
    </RadioGroup>

    <TextView
        android:id="@+id/tv_above_q4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"/>
    <TextView
        android:text="@string/fourth_question"
        style="@style/Questions"/>
    <RadioGroup
        android:id="@+id/radio_gp4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    <RadioButton
        android:id="@+id/Wrong_Answer_Q4_1"
        android:text="Arthur Conan Doyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Answers"/>
    <RadioButton
        android:id="@+id/Right_Answer_Q4"
        android:text="Gosho Aoyama"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Answers"/>
    <RadioButton
        android:id="@+id/Wrong_Answer_Q4_2"
        android:text=" Yōzaburō Kanari"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Answers"/>
    </RadioGroup>

    <TextView
        android:id="@+id/tv_above_q5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"/>
    <TextView
        android:text="@string/fifth_question"
       style="@style/Questions"/>
    <RadioGroup
        android:id="@+id/radio_gp5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    <RadioButton
        android:id="@+id/Right_Answer_Q5"
        android:text="@string/surgeon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Answers"/>
    <RadioButton
        android:id="@+id/Wrong_Answer_Q5_1"
        android:text="@string/dentist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Answers"/>
    <RadioButton
        android:id="@+id/Wrong_Answer_Q5_2"
        android:text="@string/policeman"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Answers"/>
    </RadioGroup>

    <TextView
        android:id="@+id/tv_above_q6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"/>
    <TextView
        android:text="@string/sixth_question"
        style="@style/Questions"/>
    <RadioGroup
        android:id="@+id/radio_gp6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    <RadioButton
        android:id="@+id/Wrong_Answer_Q6_1"
        android:text="Agatha Christie"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Answers"/>
    <RadioButton
        android:id="@+id/Wrong_Answer_Q6_2"
        android:text="Arthur Conan Doyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Answers"/>
    <RadioButton
        android:id="@+id/Right_Answer_Q6"
        android:text="Edgar Allan Poe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Answers"/>
    </RadioGroup>

    <TextView
        android:id="@+id/tv_above_q7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"/>
    <TextView
        android:text="@string/seventh_Question"
        style="@style/Questions"/>
    <EditText
        android:id="@+id/Question7_Answer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Answers"
        android:inputType="textCapWords"
        android:hint="@string/type_a_name"
        android:textColorHint="@color/colorAccent"/>

    <TextView
        android:id="@+id/Quiz_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"/>

    <Button
        android:id="@+id/Submit_Btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit_your_answer"
        android:layout_gravity="center"
        android:onClick="Submit"
        android:background="#827717"
        android:paddingRight="5dp"
        android:paddingLeft="5dp"/>
    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/reset_icon"
        android:layout_gravity="center"
        android:onClick="Reset"/>
</LinearLayout>
</ScrollView>